<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/llCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="@dimen/dimen_16"
            android:src="@drawable/ic_photo_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_capture_image"
            android:textColor="#757575"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="@dimen/dimen_16"
            android:src="@drawable/ic_photo_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_capture_video"
            android:textColor="#757575"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="@dimen/dimen_16"
            android:src="@drawable/ic_insert_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_photo_amp_video_library"
            android:textColor="#757575"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDocument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/dimen_16"
        android:paddingRight="@dimen/dimen_16"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="@dimen/dimen_16"
            android:src="@drawable/ic_insert_drive_file" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lbl_document"
            android:textColor="#757575"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>